--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "firebase": "^5.8.2",
+    "node-sass": "^4.11.0",
+    "print-js": "^1.0.54",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router": "^4.3.1",
